Barely bones HTML added.

--- a/index.html
+++ b/index.html
@@ -2,15 +2,77 @@
 <html> 
   <head>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="resources/css/index.css">
+    <link rel="stylesheet" type="text/css" href="resources/index.css">
     <script src="resources/index.js" defer></script>
   </head>
   <body>
 
     <main>
-      <section>
-        
-      </section>
+        <article>
+          <!--Pleasing Appearance?-->
+          <section class="criterion" id="appearance">
+            <button>&lt;</button>
+            <div>
+              <h2>Pleasing Appearance?</h2>
+              <p>No</p>
+            </div>
+            <button>&gt;</button>
+          </section>
+          <!--Discernible Taste?-->
+          <section class="criterion" id="discernible">
+            <button>&lt;</button>
+            <div>
+              <h2>Discernible Taste?</h2>
+              <p>Barely</p>
+            </div>
+            <button>&gt;</button>
+          </section>
+          <!--Good Taste?-->
+          <section class="criterion" id="discernible">
+            <button>&lt;</button>
+            <div>
+              <h2>Good Taste?</h2>
+              <p>No</p>
+            </div>
+            <button>&gt;</button>
+          </section>
+          <!--Standout Taste?-->
+          <section class="criterion" id="discernible">
+            <button>&lt;</button>
+            <div>
+              <h2>Standout Taste?</h2>
+              <p>No</p>
+            </div>
+            <button>&gt;</button>
+          </section>
+          <!--Complex Taste?-->
+          <section class="criterion" id="discernible">
+            <button>&lt;</button>
+            <div>
+              <h2>Complex Taste?</h2>
+              <p>No</p>
+            </div>
+            <button>&gt;</button>
+          </section>
+          <!--Notable Mouthfeel?-->
+          <section class="criterion" id="discernible">
+            <button>&lt;</button>
+            <div>
+              <h2>Notable Mouthfeel?</h2>
+              <p>No</p>
+            </div>
+            <button>&gt;</button>
+          </section>
+          <!--Overall Experience?-->
+          <section class="criterion" id="discernible">
+            <button>&lt;</button>
+            <div>
+              <h2>Overall Experience?</h2>
+              <p>Bad</p>
+            </div>
+            <button>&gt;</button>
+          </section>
+        </article>
     </main>
 
   </body>
