Bare bones HTML formatting added.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
             </div>
             <button>&gt;</button>
           </section>
+          <!--Final Rating-->
+          <section id="final-rating">
+            <button>Reset</button>
+            <h2>1</h2>
+          </section>
         </article>
     </main>
 
