--- a/index.html
+++ b/index.html
@@ -11,66 +11,66 @@
         <article>
           <!--Pleasing Appearance?-->
           <section class="criterion" id="appearance">
-            <button>&lt;</button>
+            <button class="back">&lt;</button>
             <div>
               <h2>Pleasing Appearance?</h2>
               <p>No</p>
             </div>
-            <button>&gt;</button>
+            <button class="forward">&gt;</button>
           </section>
           <!--Discernible Taste?-->
           <section class="criterion" id="discernible">
-            <button>&lt;</button>
+            <button class="back">&lt;</button>
             <div>
               <h2>Discernible Taste?</h2>
               <p>Barely</p>
             </div>
-            <button>&gt;</button>
+            <button class="forward">&gt;</button>
           </section>
           <!--Good Taste?-->
-          <section class="criterion" id="discernible">
-            <button>&lt;</button>
+          <section class="criterion" id="good">
+            <button class="back">&lt;</button>
             <div>
               <h2>Good Taste?</h2>
               <p>No</p>
             </div>
-            <button>&gt;</button>
+            <button class="forward">&gt;</button>
           </section>
           <!--Standout Taste?-->
-          <section class="criterion" id="discernible">
-            <button>&lt;</button>
+          <section class="criterion" id="standout">
+            <button class="back">&lt;</button>
             <div>
               <h2>Standout Taste?</h2>
               <p>No</p>
             </div>
-            <button>&gt;</button>
+            <button class="forward">&gt;</button>
           </section>
           <!--Complex Taste?-->
-          <section class="criterion" id="discernible">
-            <button>&lt;</button>
+          <section class="criterion" id="complex">
+            <button class="back">&lt;</button>
             <div>
               <h2>Complex Taste?</h2>
               <p>No</p>
             </div>
-            <button>&gt;</button>
+            <button class="forward">&gt;</button>
           </section>
           <!--Notable Mouthfeel?-->
-          <section class="criterion" id="discernible">
-            <button>&lt;</button>
+          <section class="criterion" id="mouthfeel">
+            <button class="back">&lt;</button>
             <div>
               <h2>Notable Mouthfeel?</h2>
               <p>No</p>
             </div>
-            <button>&gt;</button>
+            <button class="forward">&gt;</button>
           </section>
           <!--Overall Experience?-->
-          <section class="criterion" id="discernible">
-            <button>&lt;</button>
+          <section class="criterion" id="overall">
+            <button class="back">&lt;</button>
             <div>
               <h2>Overall Experience?</h2>
               <p>Bad</p>
             </div>
-            <button>&gt;</button>
+            <button class="forward">&gt;</button>
           </section>
           <!--Final Rating-->
           <section id="final-rating">
