Added color coding to see which media query is current applied.

--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
           </section>
           <!--Final Rating-->
           <section id="final-rating">
-            <button>Reset</button>
-            <h2>1</h2>
+            <button>1.00</button>
           </section>
         </article>
     </main>
